@@ -1,5 +1,4 @@
 v0.8
-	pref to update db on opening sonata?
 	Stream support
 	allow multiple columns?
 	song properties (metadata)
